--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Anime, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Anime | Template</title>
+    <title>Files D | Accueil</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -46,19 +46,25 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">Homepage</a></li>
-                                <li><a href="./categories.html">Categories <span class="arrow_carrot-down"></span></a>
+                               <li class="active"><a href="index2.html">Accueil</a></li>
+                                <li><a href="Search/index.html">Recherche <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="./categories.html">Categories</a></li>
-                                        <li><a href="./anime-details.html">Anime Details</a></li>
-                                        <li><a href="./anime-watching.html">Anime Watching</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
-                                        <li><a href="./signup.html">Sign Up</a></li>
-                                        <li><a href="./login.html">Login</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="#">Contacts</a></li>
+                                        <li><a href="Search/index.html"></a></li>
+                                        <li class="active"><a href="Search/index.html">Recherche 🔍</a></li>
+                                       
+                                    </li>
+                                     </ul>
+                                         <li><a href="index2.html">Liens utiles <span class="arrow_carrot-down"></span></a>
+                                             <ul class="dropdown">
+                                            <li><a href="https://discord.gg/dDEEqYGYmd">Serveur discord</a></li>
+                                            <li><a href="https://www.paypal.me/informatique455">Paypal</a></li>
+                                            <li><a href="https://www.tiktok.com/@projet.d?_t=8cQcCIpG06t&_r=1">Tik Tok</a></li>
+                                            <li><a href="https://cdn.githubraw.com/Forum-D/Files-D-site/main/database.json">Api bot</a></li>
+                                        </ul>
+                                    </li>
+                                  <li><a href="faq.html">QR</a></li>
+                            </ul>
+                        <li><a href="avisr.html">Nos avis</a></li>
                             </ul>
                         </nav>
                     </div>
