--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         </ul>
                                     </li>
                                   <li><a href="faq.html">QR</a></li>
-                            <li><a href="avisr.html">Nos avis</a></li>
+                            <li><a href="avis.html">Nos avis</a></li>
                             </ul>
                             </ul>
                         </nav>
