--- a/Search/index.html
+++ b/Search/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/images/logo/icon.html" type="image/png">
-    <title>Files D</title>
+    <link rel="shortcut icon" href="img/logo1.png">
+    <title>Files D | Recherche</title>
   
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="../../cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
