--- a/fastfur9.html
+++ b/fastfur9.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <iframe width="560" height="315" src="https://youtube.com/embed/aXDRnHebY98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com//embedwatch?v=tOfqpdJGWL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div id="disqus_thread"></div>
             <script>
                 /**
