--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                               <li class="active"><a href="index2.html">Accueil</a></li>
+                               <li class="active"><a href="index.html">Accueil</a></li>
                                 <li><a href="Search/index.html">Recherche <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="Search/index.html"></a></li>
