--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                        
                                     </li>
                                      </ul>
-                                         <li><a href="index2.html">Liens utiles <span class="arrow_carrot-down"></span></a>
+                                         <li><a href="index.html">Liens utiles <span class="arrow_carrot-down"></span></a>
                                              <ul class="dropdown">
                                             <li><a href="https://discord.gg/dDEEqYGYmd">Serveur discord</a></li>
                                             <li><a href="https://www.paypal.me/informatique455">Paypal</a></li>
