--- a/erreur.html
+++ b/erreur.html
@@ -5,10 +5,10 @@
 <!-- Mirro#57BB4C from www.fluxycrack.fr/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 18 May 2023 10:13:06 GMT -->
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="   ">
+    <meta name="description" content="Erreur des fichiers de files D">
     <meta content="Files D" name="title">
     <link rel="shortcut icon" href="img/logo1.png">
-    <meta name="keywords" content="Anime, unica, creative, html">
+    <meta name="keywords" content="jeux, fichier, erreur, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Files D | Erreurs</title>
@@ -142,8 +142,8 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6">
                                         <ul>
-                                            <li><span>QR fait par :</span>Panda_strange pour Files D</li>
-                                            <li><span>Mise a Jour :</span>28 mai 2023</li>
+                                            <li><span>Erreur recensé par :</span>Panda_strange pour Files D</li>
+                                            <li><span>Mise a Jour :</span>4 juin 2023</li>
 
                                         </ul>
                                     </div>
@@ -181,13 +181,13 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="footer__logo">
-                            <a href="index-2.html"><img src="img/logo.png" alt=""></a>
+                            <a href="index.html"><img src="img/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="footer__nav">
                             <ul>
-                                <li class="active"><a href="index-2.html">Accueil</a></li>
+                                <li class="active"><a href="index.html">Accueil</a></li>
                             </ul>
                         </div>
                     </div>
