--- a/erreur.html
+++ b/erreur.html
@@ -136,7 +136,7 @@
                             
 
 
-                            <p>Bien-sur si tu as des questions hesite pas a me les poser sur le <a href="https://discord.gg/sSA3S3kZZn" target="_blank">Serveur Discord</a></p>
+                            <p>Bien-sur si tu as des problème qui ne sont pas ici hésite pas à demander sur l'aide sur le <a href="https://discord.gg/dDEEqYGYmd" target="_blank">Serveur Discord</a></p>
 
                             <div class="anime__details__widget">
                                 <div class="row">
