--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Anime Template">
+    <meta name="description" content="Accueil Files D">
     <meta name="keywords" content="Jeux, crack, fichier, android tv, film, série, gratuit">
     <link rel="shortcut icon" href="img/logo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
