--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
     </div>
     <div class="product__sidebar__comment">
         <div class="section-title">
+            <iframe src="https://discord.com/widget?id=1009917716653678722&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
         </div>
     </div>
