--- a/index.html
+++ b/index.html
@@ -84,26 +84,26 @@
     <section class="hero">
         <div class="container">
             <div class="hero__slider owl-carousel">
-                <div class="hero__items set-bg" data-setbg="https://media.tenor.com/R9v3PnTqxXcAAAAd/far-cry6-far-cry.gif">
+                <div class="hero__items set-bg" data-setbg="https://cdn.discordapp.com/attachments/1095898797550338108/1112051223881842828/lv_0_20230527181230.gif">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
                                 <div class="label"></div>
-                                <h2>Far Cry 6</h2>
+                                <h2>Adobe Photoshop</h2>
                                 <p></p>
-                                <a href="farcry6jeu.html"><span>Télécharger le jeu</span> <i class="fa fa-angle-right"></i></a>
+                                <a href="#"><span>Télécharger le fichier</span> <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="hero__items set-bg" data-setbg="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjVjMjcyNWMyMzAzOTJkMjU1ZGE4MjA4ODI4NmZkNTljNDM1NWFjMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/ap3BB0LxO5LbZUTaMc/giphy.gif">
+                <div class="hero__items set-bg" data-setbg="https://giffiles.alphacoders.com/655/6558.gif">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
                                 <div class="label"></div>
-                                <h2>Goat Simualator 3</h2>
+                                <h2>Fast and Furious 9</h2>
                                 <p></p>
-                                <a href="goatsim3.html"><span>Télécharger le jeu</span> <i class="fa fa-angle-right"></i></a>
+                                <a href="fastfur9.html"><span>Voir le film</span> <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
