--- a/index.html
+++ b/index.html
@@ -86,21 +86,31 @@
 
     <!-- Product Section Begin -->
  
-    <a href="#" target="_blank" hidden></a>
-    <input type="text" placeholder="Cliquez pour rechercher.." id="search" autocomplete="off">
+   <body>
 
-    <div class="results">
-      <ul>
-      </ul>
+  <header>
+    <div class="toggle"><a href="../index-2.html"><img src="../Search/toggle.png" alt=""></a></div>
+  </header>
+
+    <div class="wrapper">
+      <div class="search-input">
+
+        <a href="#" target="_blank" hidden></a>
+        <input type="text" placeholder="Type to search.." id="search" autocomplete="off">
+
+        <div class="results">
+          <ul>
+          </ul>
+        </div>
+
+        <div class="icon"><i class="fas fa-search"></i></div>
+      </div>
     </div>
 
-    <div class="icon"><i class="fas fa-search"></i></div>
-  </div>
-</div>
+     <script src="assets/js/script.js"></script>
+     <script src="assets/js/suggestions.js"></script>
+  </body>
 
- <script src="assets/js/script.js"></script>
- <script src="assets/js/suggestions.js"></script>
-</body>
 
 <!-- Product Section End -->
 
