--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       </div>
     </div>
 
-     <script src="assets/js/script.js"></script>
-     <script src="assets/js/suggestions.js"></script>
+     <script src="../Search/assets/js/script.js"></script>
+     <script src="../Search/assets/js/suggestions.js"></script>
   </body>
 
 
