--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="search-input">
 
         <a href="#" target="_blank" hidden></a>
-        <input type="text" placeholder="Type to search.." id="search" autocomplete="off">
+        <input type="text" placeholder="écrire pour rechercher.." id="search" autocomplete="off">
 
         <div class="results">
           <ul>
