--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Accueil Files D">
+    <meta name="description" content="Recherche Files D">
     <meta name="keywords" content="Jeux, crack, fichier, android tv, film, série, gratuit">
     <link rel="shortcut icon" href="img/logo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Files D | Accueil</title>
+    <title>Files D | Recherche</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
