--- a/Search/index.html
+++ b/Search/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <header>
-    <a href="fakelogo.png" class="logo"><img src="#" alt=""></a>
+    <a href="https://cdn.discordapp.com/attachments/1095898796082348103/1115306378114896035/Sans_titre_125_20230605174829.png" class="logo"><img src="#" alt=""></a>
     <div class="toggle"><a href="../index-2.html"><img src="toggle.png" alt=""></a></div>
   </header>
 
