--- a/Search/index.html
+++ b/Search/index.html
@@ -20,14 +20,14 @@
 
   <header>
     <a href="https://cdn.discordapp.com/attachments/1095898796082348103/1115306378114896035/Sans_titre_125_20230605174829.png" class="logo"><img src="#" alt=""></a>
-    <div class="toggle"><a href="../index-2.html"><img src="toggle.png" alt=""></a></div>
+    <div class="toggle"><a href="../index.html"><img src="https://cdn.discordapp.com/attachments/1095898796082348103/1115309678361067580/Sans_titre_135_20230605180219.png" alt=""></a></div>
   </header>
 
     <div class="wrapper">
       <div class="search-input">
 
         <a href="#" target="_blank" hidden></a>
-        <input type="text" placeholder="Type to search.." id="search" autocomplete="off">
+        <input type="text" placeholder="Cliquez pour rechercher.." id="search" autocomplete="off">
 
         <div class="results">
           <ul>
